[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
fix = true
target-version = "py312"

lint.select = [
  "E",
  "F",
  "B",
  "C",
  "N",
  "I",
  "UP",
  "SIM",
  "TID",
]

exclude = [
  ".venv",
  "__pycache__",
]